--- a/wiki/HowTo_Customize_Forms_and_Listings.wiki
+++ b/wiki/HowTo_Customize_Forms_and_Listings.wiki
@@ -251,5 +251,15 @@ The registry_number field was moved up to be the first field on the form --
 
 Henceforth, the `registry_number` field is always displayed first on the form.
 
+== Restoring ui.xml == 
 
+It is good practice to make a backup copy of ui.xml whenever you edit it.
+
+However, you can also regenerate ui.xml to its original state by running :
+
+{{{
+./bin/form-xml-restore 
+}}}
+
+from the buildout folder. This will regenerate the ui.xml from the source code definition of the forms.
 
