Commit from Bungeni: Pootle Localisation Portal by user flavio.: 1022 of 1023 messages translated (1 fuzzy).

--- a/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
+++ b/bungeni_custom/trunk/translations/bungeni/en/LC_MESSAGES/bungeni.po
@@ -3,13 +3,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: Mon May 16 11:20:20 2011\n"
-"PO-Revision-Date: 2011-05-04 12:23+0300\n"
-"Last-Translator: Murithi <bungeni.translator@gmail.com>\n"
+"PO-Revision-Date: 2011-05-16 19:29+0300\n"
+"Last-Translator: Flavio <flavio.zeni@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Pootle 2.0.4\n"
 "Language-Code: en\n"
@@ -268,7 +268,7 @@ msgstr "manage vocabularies"
 
 #: src/bungeni.main/bungeni/core/audit.py:247
 msgid "Audit error. No user logged in."
-msgstr ""
+msgstr "audit error - no user logged in"
 
 #: src/bungeni.main/bungeni/core/dc.py:104
 #: src/bungeni.main/bungeni/ui/rss.py:396
@@ -388,9 +388,8 @@ msgstr "deactivate"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:135
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:179
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:194
-#, fuzzy
 msgid "Submit to Signatories"
-msgstr "submitted to ministry"
+msgstr "submit to signatories"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:130
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:46
@@ -773,12 +772,10 @@ msgid "Approve"
 msgstr "approve"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:577
-#, fuzzy
 msgid "consent"
-msgstr "content"
+msgstr "consent"
 
 #: src/bungeni.main/bungeni/core/workflows/permissions.zcml:580
-#, fuzzy
 msgid "reject"
 msgstr "reject"
 
@@ -1138,9 +1135,8 @@ msgstr "group not yet active"
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:23
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:91
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:145
-#, fuzzy
 msgid "Submitted to Signatories"
-msgstr "submitted to ministry"
+msgstr "submitted to signatories"
 
 #: src/bungeni.main/bungeni/core/workflows/wfi18n.pt:231
 msgid "Internal - visible to bungeni users"
@@ -1448,27 +1444,27 @@ msgstr "max questions per sitting per MP"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:285
 msgid "Minimum consented signatories for a bill"
-msgstr ""
+msgstr "minimum consented signatories for a bill"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:288
 msgid "Maximum consented signatories for a bill"
-msgstr ""
+msgstr "maximum consented signatories for a bill"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:291
 msgid "Minimum consented signatories for a question"
-msgstr ""
+msgstr "minimum consented signatories for a question"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:294
 msgid "Maximum consented signatories for a question"
-msgstr ""
+msgstr "maximum consented signatories for a question"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:297
 msgid "Minimum consented signatories for a motion"
-msgstr ""
+msgstr "minimum consented signatories for a motion"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:300
 msgid "Maximum consented signatories for a motion"
-msgstr ""
+msgstr "maximum consented signatories for a motion"
 
 #: src/bungeni.main/bungeni/models/interfaces.py:307
 msgid "Email Notifications Enabled?"
@@ -1868,23 +1864,20 @@ msgid "View comments"
 msgstr "view comments"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:253
-#, fuzzy
 msgid "Add Signatory"
-msgstr "add cosignatory"
+msgstr "add signatory"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:254
 msgid "Consent or Reject"
-msgstr ""
+msgstr "consent or reject"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:255
-#, fuzzy
 msgid "Delete Signatory"
-msgstr "delete cosignatory"
+msgstr "delete signatory"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:256
-#, fuzzy
 msgid "Edit Signatory"
-msgstr "edit cosignatory"
+msgstr "edit signatory"
 
 #: src/bungeni.main/bungeni/models/permissions.zcml:258
 #: src/bungeni.main/bungeni/models/permissions.zcml:259
@@ -2132,9 +2125,8 @@ msgid "Bungeni Visitor"
 msgstr "bungeni visitor"
 
 #: src/bungeni.main/bungeni/models/roles.zcml:21
-#, fuzzy
 msgid "Document Signatory"
-msgstr "document source"
+msgstr "document signatory"
 
 #: src/bungeni.main/bungeni/ui/attendance.py:142
 #: src/bungeni.main/bungeni/ui/forms/common.py:360
@@ -2362,14 +2354,12 @@ msgstr "date of the dissolution"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1180
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1186
-#, fuzzy
 msgid "Committee type status"
-msgstr "committees types"
+msgstr "committees types status"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1181
-#, fuzzy
 msgid "Committee type statuses"
-msgstr "committees types"
+msgstr "committees type statuses"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1194
 msgid "Committee type"
@@ -2380,7 +2370,6 @@ msgid "Committee types"
 msgstr "committees types"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1200
-#, fuzzy
 msgid "Committee Type"
 msgstr "committee type"
 
@@ -2507,13 +2496,12 @@ msgstr "enter one fax number per line"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1505
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1506
-#, fuzzy
 msgid "Title types"
-msgstr "file type"
+msgstr "title types"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1515
 msgid "Role associated with title"
-msgstr ""
+msgstr "role associated with title"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1517
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1665
@@ -2522,27 +2510,27 @@ msgstr "role"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1518
 msgid "Role associated with this title"
-msgstr ""
+msgstr "role associated with this title"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1525
-#, fuzzy
 msgid "User Unique"
-msgstr "username"
+msgstr "user unique"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1526
 msgid "Whether or not only one person at a time is allowed to have this title"
-msgstr ""
+msgstr "whether or not only one person at a time is allowed to have this title"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1532
-#, fuzzy
 msgid "Sort Order"
-msgstr "short name"
+msgstr "sort order"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1533
 msgid ""
 "The order in which members with this title will appear relative to other "
 "members"
 msgstr ""
+"the order in which members with this title will appear relative to other "
+"members"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1541
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:1545
@@ -3036,15 +3024,13 @@ msgstr "attendance type"
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2798
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2810
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2816
-#, fuzzy
 msgid "Signatory"
-msgstr "cosignatory"
+msgstr "signatory"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2799
 #: src/bungeni.main/bungeni/ui/reports.py:79
-#, fuzzy
 msgid "Signatories"
-msgstr "cosignatories"
+msgstr "signatories"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2803
 #: src/bungeni.main/bungeni/ui/forms/common.py:222
@@ -3055,9 +3041,8 @@ msgid "View"
 msgstr "view"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2824
-#, fuzzy
 msgid "Signature status"
-msgstr "generate takes"
+msgstr "signature status"
 
 #: src/bungeni.main/bungeni/ui/descriptor/descriptor.py:2836
 msgid "Constituencies"
@@ -3786,7 +3771,6 @@ msgstr ""
 "existing sitting"
 
 #: src/bungeni.main/bungeni/ui/forms/validations.py:579
-#, fuzzy
 msgid "A title with %s sub role already exists"
 msgstr "a person with the title %s already exists"
 
@@ -3877,9 +3861,8 @@ msgid "Add committee type..."
 msgstr "add committee type..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:57
-#, fuzzy
 msgid "Add committee type status..."
-msgstr "add committee type..."
+msgstr "add committee type status..."
 
 #: src/bungeni.main/bungeni/ui/menu-vocabularies.zcml:64
 msgid "Add postal type..."
@@ -3993,12 +3976,11 @@ msgstr "attached files"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1335
 msgid "review signature"
-msgstr ""
+msgstr "review signature"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1343
-#, fuzzy
 msgid "back to document"
-msgstr "tabled document"
+msgstr "back to document"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:1352
 msgid "Audit Log"
@@ -4197,9 +4179,8 @@ msgstr "the \"add...\" menu - for motion"
 #: src/bungeni.main/bungeni/ui/menu.zcml:575
 #: src/bungeni.main/bungeni/ui/menu.zcml:624
 #: src/bungeni.main/bungeni/ui/menu.zcml:940
-#, fuzzy
 msgid "Add signatory..."
-msgstr "add cosignatory..."
+msgstr "add signatory..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:442
 #: src/bungeni.main/bungeni/ui/menu.zcml:513
@@ -4253,9 +4234,8 @@ msgid "Actions for Calendar Sittings"
 msgstr "actions for calendar sittings"
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:547
-#, fuzzy
 msgid "Add Title Type..."
-msgstr "add bill type..."
+msgstr "add title type..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:555
 msgid "The 'Add...' menu - for question"
@@ -4291,7 +4271,6 @@ msgid "Add Office Address..."
 msgstr "add office address..."
 
 #: src/bungeni.main/bungeni/ui/menu.zcml:692
-#, fuzzy
 msgid "Add Title..."
 msgstr "add title..."
 
